Move deps + new Double => Double.valuOf